fixed overflow issue!

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -6,6 +6,7 @@
 
 .hero {
   display: flex;
+  overflow: hidden;
   flex-direction: row;
   justify-content: center;
   width: auto;
